2012-03-16   D. V. Wiebe <getdata@ketiltrout.net> svn:676
	* configure.ac bindings/idl/package/configure.ac src/include.h
	bindings/make_parameters.c bindings/cxx/internal.h bindings/idl/getdata.c
	test/test.h util/dirfile2ascii.c util/checkdirfile.c: Renamed config.h to
	gd_config.h to get around lossage in the Perl CORE public headers.
	
	* bindings/perl/test: Renamed from t.
	* bindings/perl/MANIFEST.in: Renamed from MANIFEST.
	* bindings/perl Makefile.am bindings/f77/test/Makefile.am: VPATH fixes.

	* src/fragment.c (gd_desync): dup the dirfile fd before closing.
	* test/desync_reopen.c test/desync_reopen_inv.c: Added.

	* bindings/idl/package/configure.ac bindings/idl/package/README: Bump
	GetData min version.

2012-03-15   D. V. Wiebe <getdata@ketiltrout.net> svn:675
	* src/internal.h: Add fragment->mtime, dirfile->open_flags.  Deconst
	fragment->sname.
	* src/close.c (_GD_FreeD _GD_ShutdownDirfile): Add new parameter
	(keep_dirfile) to prohibit deallocating the dirfile struct itself.
	De-staticked _GD_ShutdownDirfile.
	* src/include.c (_GD_Include): Compute the path relative to the parent of
	fragment and store it in fragment->sname.  Store mtime.
	* src/close.c (_GD_FreeD): Free fragment->sname.
	* src/flush.c (_GD_FlushFragment): Remove unnecessary strdup: we already
	cache the basename.  Update mtime.
	* src/open.c (_GD_CreateDirfile): Return mtime.
	* src/open.c (_GD_Open): Renamed from gd_cbopen; optionally take an existing
	dirfd and DIRFILE pointer.  Fix the dirfd/dirfile race condition by
	canonicalising dirfile first.
	* src/fragment.c (gd_desync) src/open.c (gd_cbopen): Added.
	* src/getdata.h.in: Added GD_DESYNC_PATHCHECK GD_DESYNC_REOPEN.
	* test/desync.c test/desync_flush.c: Added.

	* src/internal.h (offsetof): Added.
	* src/compat.c (gd_readdir): Added.
	* src/open.c (_GD_TruncDir): Use a thread-safe readdir where possible.

	* src/include.c (gd_include_affix): Don't call do stuff before validating
	the dirfile.
